Changelog
=========

1.2 (unreleased)
----------------

- Updated manifest file and added preview file for diazo theme [macagua]

- Update information about this package [macagua]

- Added more keywords and strings classifiers items for this package [macagua]

1.1 (2011-07-30)
----------------

- Fixed doctype [giacomos]

1.0 (2011-06-18)
----------------

- Initial release [giacomos]