@@ -1,0 +1,4 @@
+<theme>
+    <name>plonetheme.darkened</name>
+    <enabled>false</enabled>
+</theme>
