@@ -4,6 +4,8 @@ Changelog
 1.2 (unreleased)
 ----------------
 
+- Added a GenericSetup Uninstall profile [macagua]
+
 - Updated manifest file and added preview file for diazo theme [macagua]
 
 - Update information about this package [macagua]
